# uspto-trademark-radar

./: .env.example  .gitattributes  .gitignore  CONSUMERS.md  README.md  RUNBOOK.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: monthly-update.yml
audit/: README.md  resolution_precision.json  verdicts.json
docs/: ANALYSIS.md  ARCHITECTURE.md  CLOUD.md  DATA_SOURCES.md  related-work.md  silver-schema.md
docs/adr/: 0001-source-products.md  0002-single-machine-medallion.md  0003-diy-job-ledger.md  0004-hugging-face-data-host.md  0005-bronze-mirror.md  0006-annual-rebaseline.md  0007-latest-state-corrections.md  0008-publication-ethics.md  0009-coined-scoring.md  0010-outcome-validation.md  0011-operation-resolution.md  0012-adversarial-robustness.md  0013-determinism.md  0014-resolution-validation.md  0015-event-study.md  0016-scoring-instrument.md  0017-tier3-cluster-membership.md  README.md
tests/: conftest.py  test_build_reconcile.py  test_coined_scorer.py  test_config.py  test_date_gate.py  test_detector_lists.py  test_entity_resolution.py  test_evaluation.py  test_event_study.py  test_explore.py  test_filenames.py  test_gold.py  test_integrity.py  test_ledger.py  test_lookups.py  test_mark_features.py  test_normalize.py  test_parse_xml.py  test_publish.py  test_resolution_audit.py  test_restore.py
uspto_trademark_radar/: build.py  cli.py  config.py  db.py  download.py  explore.py  filenames.py  integrity.py  ledger.py  normalize.py  odp.py  parse_stage.py  parse_xml.py  publish.py  reconcile.py  release.py  restore.py  schema.py
(+17 files in other folders)
