[project]
name = "uspto-trademark-radar"
version = "0.1.0"
description = "USPTO trademark corpus pipeline: ODP bulk download -> silver Parquet -> Hugging Face"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32",
    "duckdb>=1.1",
    "pyarrow>=17",
    "lxml>=5.2",
    "huggingface-hub>=0.26",
    "typer>=0.15",
    "python-dotenv>=1.0",
    "harlequin>=1.25",
]

[dependency-groups]
analysis = [
    "scikit-learn>=1.9.0",
    "wordfreq>=3.1.1",
    "statsmodels>=0.14",
]
dev = ["pytest>=8", "ruff>=0.8", "basedpyright>=1.21", "lxml-stubs>=0.5"]

[project.scripts]
trademark-radar = "uspto_trademark_radar.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["uspto_trademark_radar"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B", "UP"]

[tool.ruff.lint.per-file-ignores]
# typer's CLI idiom is function calls in argument defaults
"uspto_trademark_radar/cli.py" = ["B008"]

[tool.basedpyright]
venvPath = "."
venv = ".venv"
include = ["uspto_trademark_radar", "tests"]
typeCheckingMode = "standard"
